@@ -36,7 +36,9 @@ Overview
 
     * Added examples.rti.hello that talks to RTI Connext 5.1.0. 
 
-    * Fixed reading of TypeObject and PropertyList parameters 
+    * Fixed reading of TypeObject and PropertyList parameters
+    
+    * Fixed DestinationOrder 
 
  1.3.1
  
