@@ -37,22 +37,19 @@ public class DestinationOrderTest extends AbstractQosTest {
         QualityOfService qos= new QualityOfService();
         qos.setPolicy(new QosDestinationOrder(kind));
         qos.setPolicy(new QosHistory(10));
-
         // Create DataReader
         DataReader<HelloMessage> dr = p1.createDataReader(HelloMessage.class, qos);
 
         // Create DataWriter
         TDataWriter<HelloMessage> dw1 = (TDataWriter<HelloMessage>) p2.createDataWriter(HelloMessage.class, qos);
-        TDataWriter<HelloMessage> dw2 = (TDataWriter<HelloMessage>) p2.createDataWriter(HelloMessage.class, qos);
 
         // Latch used to synchronize on entity matched
-        final CountDownLatch emLatch = new CountDownLatch(4); 
+        final CountDownLatch emLatch = new CountDownLatch(2); 
         TSampleListener listener = new TSampleListener();
         dr.addSampleListener(listener);
 
         addCommunicationListener(dr, null, emLatch);
         addCommunicationListener(dw1, null, emLatch);
-        addCommunicationListener(dw2, null, emLatch);
 
         // Wait for the readers and writer to be matched
         waitFor(emLatch, LATCH_WAIT_MILLIS, true);
@@ -63,7 +60,7 @@ public class DestinationOrderTest extends AbstractQosTest {
         assertEquals(1, dr.getSamples().size());
 
         listener.resetLatch(count - 1);
-        dw2.write(new HelloMessage(1, "hello"), 9);
+        dw1.write(new HelloMessage(1, "hello"), 9);
         dw1.write(new HelloMessage(1, "hello"), 11);
 
         waitFor(listener.dLatch, LATCH_WAIT_MILLIS, true);
@@ -79,7 +76,7 @@ public class DestinationOrderTest extends AbstractQosTest {
         
         @Override
         public void onSamples(List<Sample<HelloMessage>> samples) {
-            dLatch.countDown();
+        	dLatch.countDown();
         }
     }
 }
