@@ -7,7 +7,7 @@
     </Appenders>
 
     <Loggers>
-        <Root level="debug">
+        <Root level="WARN">
             <AppenderRef ref="STDOUT" />
         </Root>
         
